# gemini_cli_gui

./: .gitignore  CMakeLists.txt  README.md  agent_manager.cpp  agent_manager.h  agent_prompt_builder.cpp  chat_formatter.cpp  chat_formatter.h  execute_code_action.cpp  execute_code_action.h  execute_shell_action.cpp  gemini_api_client.cpp  gemini_api_client.h  gemini_payload_builder.cpp  git_manager_action.cpp  inno_release.iss  main.cpp  main_window.cpp  main_window.h  session_dialog.cpp  session_dialog.h  settings_dialog.cpp  settings_dialog.h  tool_schema_provider.cpp
agent/: agent_prompt_builder.cpp  gemini_api_client.cpp  gemini_payload_builder.h
tools/: execute_shell_action.cpp  git_manager_action.h  take_screenshot_action.cpp  tool_schema_provider.cpp
